part1/1.11/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-svc
spec:
  type: ClusterIP
  selector:
    app: random
  ports:
    - port: 2346
      name: random
      protocol: TCP
      targetPort: 3000
