part1/1.11/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: random-pong-per-vol
spec:
  rules:
  - host: localhost
  - http:
      paths:
      - path: /pingpong
        backend:
          serviceName: pingpong-svc
          servicePort: 2345
      - path: /random
        backend:
          serviceName: random-svc
          servicePort: 2346
